--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sacramento Youth Commission & Adventure Club</title>
-    <meta name="description" content="Join the Sacramento Youth Commission & Adventure Club! Bridge generations, build community, and experience Sacramento's best adventures and cultural events.">
+    <title>Pan-Asian Youth Coalition highschool chapter & Adventure Club</title>
+    <meta name="description" content="Join the Friends of Chintown Square & Adventure Club! Bridge generations, build community, and experience Sacramento's best adventures and cultural events.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
